tests/fixtures/invalid-only/compliant-second.php
<?php

declare(strict_types=1);

$compliant = [2, 3];
